Add `PAGE_UP` and `PAGE_DOWN` navigation in `TextEditorPane` and corresponding unit tests for viewport-based caret movement and selection logic.